--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
 	<figure class="hero">
-		<img alt="”医療訪問マッサージ悠優”" src="img/hero1.jpg">
+		<img alt="”医療訪問マッサージ悠優”" src="img/hero1.jpg">https://github.com/satomi1222/tiarapinococo/blob/master/hero1.jpg?raw=t
 	</figure>
 
 
