--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 	</nav>
 
 
-	<figure class="hero">
-		<img alt="”医療訪問マッサージ悠優”" src="img/hero1.jpg">https://github.com/satomi1222/tiarapinococo/blob/master/hero1.jpg?raw=t
+	<figure class="hero">https://github.com/satomi1222/tiarapinococo/blob/master/hero1.jpg?raw=true
 	</figure>
 
 
