--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	</nav>
 
 
-	<figure class="hero">https://github.com/satomi1222/tiarapinococo/blob/master/hero1.jpg?raw=true
+	<figure class="hero"><img alt="”医療訪問マッサージ悠優”" src="img/hero1.jpg">
 	</figure>
 
 
